working updateHistoryByLogin